--- a/imprint.html
+++ b/imprint.html
@@ -43,13 +43,14 @@
             <h2>Angaben gemäß § 5 TMG</h2>
             <p>
                 Anja Schwab<br>
+                Harz 25<br>
                 06108 Halle (Saale)
             </p>
 
             <h2>Kontakt</h2>
             <p>
-                Telefon: +49 (0) 177 2357006<br>
-                E-Mail: <a class="link" href="mailto:max@mustermann.de">anja_schwab@gmx.de</a>
+
+                E-Mail: <a class="link" href="mailto:anja_schwab@gmx.de">anja_schwab@gmx.de</a>
             </p>
         </section>
     </main>
@@ -57,7 +58,7 @@
         <a class="logo" href="./index.html">
             <img src="./assets/logo/logo_coderr_light.svg" alt="" srcset="">
         </a>
-        <p>© 2024 Coderr. All rights reserved.</p>
+        <p>© 2025 Coderr. All rights reserved.</p>
         <div class="d_flex_cc_gm">
             <a class="link" href="./imprint.html">Impressum</a>
             <a class="link" href="./privacy_policy.html">Datenschutz</a>
